# remote_pi

./: .gitignore  CLAUDE.md  PROTOCOL.md  README.md
.claude/agents/: scout-app.md  scout-pi-extension.md  scout-relay.md  scout-site.md
.github/workflows/: app-release.yml  cockpit-release.yml  windows-pi-extension.yml
app/: CLAUDE.md  pubspec.yaml
cockpit/: .gitignore  BUILD_X86_64_INTEL.md  CHANGELOG.md  CLAUDE.md  pubspec.yaml
cockpit/plugins/cockpit_pty/src/: CMakeLists.txt  cockpit_pty.c  cockpit_pty.h  cockpit_pty_unix.c  cockpit_pty_win.c
pi-extension/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
plan/: 00-decisions.md  02-ai-orchestration.md  17-rooms.md  18-model-in-tile.md  28-pi-commands.md  33-site-revamp-install-tutorials-docs.md  38-mesh-structured-identity.md  40-windows-supervisor.md  44-app-android-apk-release.md  47-android-queued-editing.md  48-cockpit-task-run.md  49-cli-image-preview.md  50-cockpit-terminal-profiles.md  51-cross-pc-mesh-routing-hardening.md  53-mongo-collection-browser.md
relay/: CLAUDE.md  Cargo.toml  README.md
relay/src/: identity.rs  lib.rs  main.rs  presence.rs  rooms.rs
relay/src/auth/: auth_test.rs  challenge.rs
relay/src/handlers/: peer.rs  pi_forward.rs
relay/src/mesh/: handler.rs  mod.rs  store.rs  types.rs  verify.rs
relay/src/peers/: registry.rs
relay/src/protocol/: outer.rs
relay/tests/: integration.rs  mesh_test.rs  pi_forward_test.rs  presence_test.rs  rooms_test.rs
relay/tests/common/: mod.rs
scripts/: cockpit-dispatch.sh  docker-build-apk.sh
site/: CLAUDE.md
(+349 files in other folders)
