[package]
name = "relay"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.7.9", features = ["ws"] }
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = "0.3.32"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio-tungstenite = "0.29.0"
